# cargo-todox

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  Makefile.scmf.toml  Makefile.toml  README.md  release.toml
src/: main.rs
tests/failure/: example.txt
tests/success/: example.txt
