[package]
edition = "2021"
name = "cargo-todox"
version = "0.2.5-dev"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
description = "Ensure source files in a cargo project do not contain TODOX issues."
repository = "https://github.com/orenbenkiki/cargo-todox"
readme = "README.md"
keywords = ["cargo", "git", "subcommand", "build"]
categories =[ "development-tools::build-utils", "development-tools::cargo-plugins"]
license = "GPL-3.0"

[dev-dependencies]
unindent = "^0.2.2"

[dependencies]
clap = { version = "^4.3.19", features = [ "cargo" ] }
